--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "massive": "^6.4.0",
     "node-sass": "^4.14.1",
     "nodemailer": "^6.4.10",
+    "nodemailer-express-handlebars": "^4.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
